--- a/requirements.txt
+++ b/requirements.txt
@@ -2,4 +2,7 @@ face_recognition==1.3.0
 matplotlib==3.10.1
 numpy==2.2.4
 opencv_python==4.11.0.86
+pandas==2.2.3
 Pillow==11.2.1
+scikit_learn==1.6.1
+streamlit==1.44.1
